Finish News Article Listings

--- a/Flexbox/News Article Listing/Starter/index.html
+++ b/Flexbox/News Article Listing/Starter/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Article Listings</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <main>
+      <h1 class="mainhead">Latest News</h1>
+      <section>
+        <article>
+          <h1>X refused to take down video viewed by Southport killer</h1>
+          <p>
+            Australia's internet regulator says X refused to take down a video
+            of a high-profile stabbing in Sydney that was watched by Axel
+            Rudakubana just before he murdered three young girls in Southport.
+          </p>
+        </article>
+        <article>
+          <h1>
+            Three investigates 999 calls not getting through during outage
+          </h1>
+          <p>
+            The mobile network Three has said some 999 calls didn't get through
+            during a major outage which affected thousands of customers. The
+            company said the problems with its services on Thursday were now
+            fixed, but has warned of further issues due to Storm Éowyn.
+          </p>
+        </article>
+        <article>
+          <h1>Clampdown on fake Google reviews announced</h1>
+          <p>
+            Google has agreed to make "significant changes to its processes" to
+            help tackle fake reviews of UK businesses, the regulator has
+            announced. The Competition and Markets Authority (CMA) says the firm
+            - which accounts for 90% of search in the UK - will attach warnings
+            to companies found to have artificially boosted their star rating.
+          </p>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
