--- a/Flexbox Responsive/Food Gallery Responsive/Before/index.html
+++ b/Flexbox Responsive/Food Gallery Responsive/Before/index.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Food for <span>thought</span></h1>
-
-    <div class="container">
-        <img src="assets/food1.jpg" alt="Food">
-        <img src="assets/food2.jpg" class="second" alt="Food">
-        <img src="assets/food3.jpg" alt="Food">
-        <img src="assets/food4.jpg" alt="Food">
+    <div class="wrapper">
+      <h1>Food for <span>thought</span></h1>
+      <div class="container">
+          <img src="assets/food1.jpg" alt="Food">
+          <img src="assets/food2.jpg" class="second" alt="Food">
+          <img src="assets/food3.jpg" alt="Food">
+          <img src="assets/food4.jpg" alt="Food">
+      </div>
     </div>
 </body>
 </html>
