Finish Responsive News Listings

--- a/Flexbox Responsive/Responsive News Article/Before/index.html
+++ b/Flexbox Responsive/Responsive News Article/Before/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <main>
-        <h1 class="mainhead">Latest News</h1>
+      <h1 class="mainhead">Latest News</h1>
 
-        <section>
-            <article>
-                <h1>Engagement at an all time low among young voters</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eveniet rem veniam quidem, aliquid impedit.</p>
-            </article>
-            <article>
-                <h1>Engagement at an all time low among young voters</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eveniet rem veniam quidem, aliquid impedit.</p>
-            </article>
-            <article>
-                <h1>Engagement at an all time low among young voters</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eveniet rem veniam quidem, aliquid impedit.</p>
-            </article>
-        </section>
+      <section>
+        <article>
+          <h1>UK demands access to Apple users' encrypted data</h1>
+          <p>
+            The UK government has demanded to be able to access encrypted data
+            stored by Apple users worldwide in its cloud service.
+          </p>
+          <p>
+            Currently only the Apple account holder can access data stored in
+            this way. The tech giant itself cannot view it.
+          </p>
+        </article>
+        <article>
+          <h1>
+            TikTok sued by parents of UK teens after alleged challenge deaths
+          </h1>
+          <p>
+            TikTok is being sued by the parents of four British teenagers who
+            believe their children died after taking part in viral trends that
+            circulated on the video-sharing platform in 2022.
+          </p>
+          <p>
+            The lawsuit claims Isaac Kenevan, Archie Battersbee, Julian "Jools"
+            Sweeney and Maia Walsh died while attempting the so-called "blackout
+            challenge".
+          </p>
+        </article>
+        <article>
+          <h1>Google remakes Super Bowl ad after AI cheese gaffe</h1>
+          <p>
+            Google has re-edited an advert for its leading artificial
+            intelligence (AI) tool, Gemini, after it overestimated the global
+            appetite for Gouda.
+          </p>
+          <p>
+            The commercial - which was supposed to showcase Gemini's abilities -
+            was created to be broadcast during the Super Bowl.
+          </p>
+        </article>
+      </section>
     </main>
-</body>
+  </body>
 </html>
