--- a/Project 2 - Designalytics/designalytics-sass/index.html
+++ b/Project 2 - Designalytics/designalytics-sass/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://fav.farm/🚀 " />
     <title>Designalytics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -224,5 +224,6 @@
         </main>
       </div>
     </div>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
